5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1758_1576.log
== TEST (2019-05-23 10:49:29) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i < size(ba)):
	if((eu == 11 and ba == 33) or (eu == 22 and ba == 11) or (eu == 33 and ba == 22)):
		i = i + 1
		ve = ve + 1
	else:
		i = i + 1
		vb = vb + 1
	
	
	print(i)
	if(ve > vb):
		print("EUSAPIA")
	elif(vb > ve):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:56:06) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i < size(ba) and size(eu)==size(ba):
	if((eu[i] == 11 and ba[i] == 33) or (eu[i] == 22 and ba[i] == 11) or (eu[i] == 33 and ba[i] == 22)):
		i = i + 1
		ve = ve + 1
	elif((ba[i] == 11 and eu[i] == 33) or (ba[i] == 22 and eu[i] == 11) or (ba[i] == 33 and eu[i] == 22)):
		i = i + 1
		vb = vb + 1
	else:
		i = i + 1
print(i):
if(ve>vb):
		print("EUSAPIA")
elif(vb>ve):
		print("BARSANULFO")
else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 9
    while(i < size(ba) and size(eu)==size(ba):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:56:29) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i<size(ba) and size(eu)==size(ba):
	if((eu[i] == 11 and ba[i] == 33) or (eu[i] == 22 and ba[i] == 11) or (eu[i] == 33 and ba[i] == 22)):
		i = i + 1
		ve = ve + 1
	elif((ba[i] == 11 and eu[i] == 33) or (ba[i] == 22 and eu[i] == 11) or (ba[i] == 33 and eu[i] == 22)):
		i = i + 1
		vb = vb + 1
	else:
		i = i + 1
print(i):
if(ve>vb):
		print("EUSAPIA")
elif(vb>ve):
		print("BARSANULFO")
else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 9
    while(i<size(ba) and size(eu)==size(ba):
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:56:42) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i<size(ba) and size(eu)==size(ba)):
	if((eu[i] == 11 and ba[i] == 33) or (eu[i] == 22 and ba[i] == 11) or (eu[i] == 33 and ba[i] == 22)):
		i = i + 1
		ve = ve + 1
	elif((ba[i] == 11 and eu[i] == 33) or (ba[i] == 22 and eu[i] == 11) or (ba[i] == 33 and eu[i] == 22)):
		i = i + 1
		vb = vb + 1
	else:
		i = i + 1
print(i):
if(ve>vb):
		print("EUSAPIA")
elif(vb>ve):
		print("BARSANULFO")
else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 18
    print(i):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:56:47) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i<size(ba) and size(eu)==size(ba)):
	if((eu[i] == 11 and ba[i] == 33) or (eu[i] == 22 and ba[i] == 11) or (eu[i] == 33 and ba[i] == 22)):
		i = i + 1
		ve = ve + 1
	elif((ba[i] == 11 and eu[i] == 33) or (ba[i] == 22 and eu[i] == 11) or (ba[i] == 33 and eu[i] == 22)):
		i = i + 1
		vb = vb + 1
	else:
		i = i + 1
print(i)
if(ve>vb):
		print("EUSAPIA")
elif(vb>ve):
		print("BARSANULFO")
else:
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:56:59) 
-- CODE:
from numpy import*
eu = array(eval(input("eu: ")))
ba = array(eval(input("bar: ")))

i = 0
ve = 0
vb = 0

while(i<size(ba) and size(eu)==size(ba)):
	if((eu[i] == 11 and ba[i] == 33) or (eu[i] == 22 and ba[i] == 11) or (eu[i] == 33 and ba[i] == 22)):
		i = i + 1
		ve = ve + 1
	elif((ba[i] == 11 and eu[i] == 33) or (ba[i] == 22 and eu[i] == 11) or (ba[i] == 33 and eu[i] == 22)):
		i = i + 1
		vb = vb + 1
	else:
		i = i + 1
print(i)
if(ve>vb):
		print("EUSAPIA")
elif(vb>ve):
		print("BARSANULFO")
else:
		print("EMPATE")
-- EXECUTION TIME:
0.451315
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
